--- a/components/homework_component.html
+++ b/components/homework_component.html
@@ -140,7 +140,7 @@
           <!-- <select name="" id="" class="form-control mb-3">
             <option value="">--- 請選擇城市 ---</option>
           </select> -->
-          <option-component :city="location" v-if="location[0]"></option-component>
+          <div is="option-component" :city="location" v-if="location[0]"></div>
           <div>
             <h4>關注城市</h4>
             <div class="card-columns">
@@ -162,7 +162,19 @@
 
           <hr>
           <div class="card-columns">
-            <div class="card status-aqi2">
+            <area-component :city-data="data"></area-component>
+          </div>
+        </div>
+
+        <script type="text/x-template" id="optionComponent">
+          <select name="" id="" class="form-control mb-3">
+              <option value="" :disabled="disabled" selected>--- 請選擇城市 ---</option>
+              <option  v-for="item in thelocation" :value="item">{{item}}</option>
+            </select>
+        </script>
+
+        <script type="text/x-template" id="areaComponent">
+          <div class="card status-aqi2">
               <div class="card-header">苗栗縣 - 三義
                 <a href="#" class="float-right"><i class="far fa-star"></i></a>
               </div>
@@ -175,33 +187,6 @@
                 2018-05-20 16:00
               </div>
             </div>
-          </div>
-        </div>
-
-        <script type="text/x-template" id="optionComponent">
-          <select name="" id="" class="form-control mb-3">
-              <option value="" :disabled="disabled" selected>--- 請選擇城市 ---</option>
-              <option  v-for="item in location" :value="item">{{item}}</option>
-            </select>
-        </script>
-
-        <script type="text/x-template" id="areaComponent">
-          <div class="card-columns">
-              <div class="card status-aqi2">
-                <div class="card-header">苗栗縣 - 三義
-                  <a href="#" class="float-right"><i class="far fa-star"></i></a>
-                </div>
-                <div class="card-body">
-                  <ul class="list-unstyled">
-                    <li>AQI 指數: 54</li>
-                    <li>PM2.5: 8</li>
-                    <li>說明: 普通</li>
-                  </ul>
-                  2018-05-20 16:00
-                </div>
-              </div>
-            </div>
-          </div>
         </script>
 
 
@@ -211,7 +196,7 @@
             template: '#optionComponent',
             data: function () {
               return {
-                location: this.city,
+                thelocation: this.city,
                 disabled: true
               }
             }
