--- a/components/homework_component.html
+++ b/components/homework_component.html
@@ -140,7 +140,7 @@
           <!-- <select name="" id="" class="form-control mb-3">
             <option value="">--- 請選擇城市 ---</option>
           </select> -->
-          <div is="option-component" :city="location" v-if="location[0]"></div>
+          <option-component :city="location" v-if="location[0]" v-on:selcity="getCity"></option-component>
           <div>
             <h4>關注城市</h4>
             <div class="card-columns">
@@ -161,32 +161,34 @@
           </div>
 
           <hr>
-          <div class="card-columns">
-            <area-component :city-data="data"></area-component>
-          </div>
+
+          <area-component :city-data="filterLocation" v-if="data[0]"></area-component>
+
         </div>
 
         <script type="text/x-template" id="optionComponent">
-          <select name="" id="" class="form-control mb-3">
-              <option value="" :disabled="disabled" selected>--- 請選擇城市 ---</option>
-              <option  v-for="item in thelocation" :value="item">{{item}}</option>
+          <select name="" id="" class="form-control mb-3" v-model="selected" @change="changeCity($event)">
+              <option value="" :disabled="disabled" selected value="">--- 請選擇城市 ---</option>
+              <option  v-for="(item,index) in thelocation" :value="item" :key="index">{{item}}</option>
             </select>
         </script>
 
         <script type="text/x-template" id="areaComponent">
-          <div class="card status-aqi2">
-              <div class="card-header">苗栗縣 - 三義
+          <div class="card-columns">
+            <div class="card status-aqi2"  v-for="(item,index) in info" :key="index">
+              <div class="card-header">{{item.County}} - {{item.SiteName}}
                 <a href="#" class="float-right"><i class="far fa-star"></i></a>
               </div>
               <div class="card-body">
                 <ul class="list-unstyled">
-                  <li>AQI 指數: 54</li>
-                  <li>PM2.5: 8</li>
-                  <li>說明: 普通</li>
+                  <li>AQI 指數: {{item.County}}</li>
+                  <li>PM2.5:{{item["PM2.5"]}}</li>
+                  <li>說明: {{item.Status}}</li>
                 </ul>
-                2018-05-20 16:00
+               {{item.PublishTime}}
               </div>
             </div>
+          </div>
         </script>
 
 
@@ -197,9 +199,19 @@
             data: function () {
               return {
                 thelocation: this.city,
-                disabled: true
+                disabled: true,
+                selected: '',
               }
-            }
+            },
+            methods: {
+              changeCity: function (event) {
+                this.$emit('selcity', event.target.value)
+                // console.log(event.target.value)
+              }
+            },
+
+
+
           });
 
           Vue.component('area-component', {
@@ -207,9 +219,18 @@
             template: '#areaComponent',
             data: function () {
               return {
-                info: this.cityData
+                info: this.cityData,
+              }
+            },
+            watch: {
+              cityData: function (newVal, oldVal) {
+                console.log('Prop changed: ', newVal, ' | was: ', oldVal);
+                this.info = newVal;
               }
             }
+
+
+
           })
           // API 來源
           // https://opendata.epa.gov.tw/Data/Contents/AQI/
@@ -221,6 +242,8 @@
               location: [],
               stared: [],
               filter: '',
+              father_select: ''
+
             },
             // 請在此撰寫 JavaScript
             methods: {
@@ -234,25 +257,11 @@
                   console.log(response)
                 });
               },
+              getCity: function (city) {
+                this.father_select = city;
+              }
             },
-            // created: function () {
-            //   var vm = this;
-            //   const api = 'http://opendata2.epa.gov.tw/AQI.json';
-            //   //在載入頁面時就拿到所有資料
-            //   $.get(api).then(function (response) {
-            //     vm.data = response;
-            //     //拿到資料中城市
-            //     var arr = response.map(item => item.County);
-            //     console.log(arr);
 
-            //     //過濾掉重複的城市
-            //     var allCity = arr.filter(function (item, index, arr) {
-            //       return arr.indexOf(item) === index;
-            //     });
-            //     console.log(allCity);
-
-            //   }).then(console.log(allCity));
-            // }
 
             created: function () {
               var vm = this;
@@ -271,6 +280,25 @@
               }).then(city => {
                 vm.location = city;
               });
+            },
+
+            computed: {
+              filterLocation: function () {
+                if (this.father_select == "") {
+                  return this.data
+                }
+                if (this.father_select !== "") {
+                  var newcitys = [];
+                  this.data.forEach(item => {
+                    if (item.County == this.father_select) {
+                      newcitys.push(item)
+                    }
+                  });
+                  // console.log('不等於')
+                  return newcitys;
+                }
+                return [];
+              }
             }
           });
         </script>
